# SLAM_NAV2

./: CMakeLists.txt  README.md  package.xml
config/: localization_params_online_async.yaml  mapping_params_online_async.yaml  nav2_params.yaml  slam_config.rviz
launch/: localization.launch.py  localization_amcl.launch.py  mapping.launch.py  navigation.launch.py  navigation_amcl.launch.py
maps/: new_home_image.pgm  new_home_image.yaml  new_home_serial.data
scripts/: nav2_command.py
